SubBt/force-app/main/default/objects/Asset_History__c/Asset_History__c.object-meta.xml
<CustomObject>
    <label>Asset History</label>
    <nameField>
        <displayFormat>AHL-{00000}</displayFormat>
        <label>Asset History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>