SubBt/force-app/main/default/objects/Asset_History__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <label>Date Created</label>
    <type>DateTime</type>
</CustomField>