SubBt/force-app/main/default/objects/Asset_History__c/fields/Date_Maintenance_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Maintenance_Completed__c</fullName>
    <label>Date Maintenance Completed</label>
    <type>Date</type>
</CustomField>