SubBt/force-app/main/default/objects/Asset_History__c/fields/Date_on_Job__c.field-meta.xml
<CustomField>
    <fullName>Date_on_Job__c</fullName>
    <inlineHelpText>Date the Asset was moved to the job.</inlineHelpText>
    <label>Date on Job</label>
    <type>Date</type>
</CustomField>