SubBt/force-app/main/default/objects/Asset_History__c/fields/Description_of_Damage__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Damage__c</fullName>
    <label>Description of Damage</label>
    <type>TextArea</type>
</CustomField>