SubBt/force-app/main/default/objects/Asset_History__c/fields/Hours_Used__c.field-meta.xml
<CustomField>
    <fullName>Hours_Used__c</fullName>
    <label>Hours Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>