SubBt/force-app/main/default/objects/Asset_History__c/fields/Location_on_Jobsite__c.field-meta.xml
<CustomField>
    <fullName>Location_on_Jobsite__c</fullName>
    <label>Location on Jobsite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>