SubBt/force-app/main/default/objects/Asset_History__c/fields/Maintenance_Work_Completed__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Work_Completed__c</fullName>
    <inlineHelpText>If maintenance work has been done on this Asset, please provide details.</inlineHelpText>
    <label>Maintenance Work Completed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>