SubBt/force-app/main/default/objects/Asset_History__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Use</fullName>
                <default>true</default>
                <label>General Use</label>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Stolen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>